--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,17 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#nav {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  justify-items: center;
+}
+
+#logo {
+  max-width: 25vw;
+}
+
+#logo:hover {
+  cursor: pointer;
 }
