--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
 
 button, input, select {
   border-radius: 10px;
-  padding: 2% 2% 2% 2%;
+  margin: 2% 2% 2% 2%;
 }
 
 nav {
@@ -61,8 +61,8 @@ ul {
 
 nav li {
   display: inline-block;
-  padding-left: 2%;
-  padding-right: 2%;
+  margin-left: 2%;
+  margin-right: 2%;
   color: #FFFFFF;
 }
 
