--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@ button, input, select {
   margin: 0.5% 0.5% 0.5% 0.5%;
 }
 
+button, .button {
+  background-color: #007AFF;
+  color: #FFFFFF;
+}
+
 nav {
   display: inline-block;
   justify-self: start;
