--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@ button, .button {
   color: #FFFFFF;
 }
 
+button:disabled, .button:disabled {
+  opacity: 0.6;
+}
+
 nav {
   display: inline-block;
   justify-self: start;
