Mostly comments for my university supervisor but also some work on components to facilitate the messaging feature

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* For the time being, all CSS for the entire app is in this file. May separate into components later */
 .App {
   text-align: center;
 }
