CSS for the message textarea in MessageForm. Also in MessageForm - charsRemaining method behaving a bit strangely, altered method to hopefully rectify that. Nav - new method reset state triggered on clicking the logout option. Previously was directly dispatching state update actions from the onclick handler - moved those into its own method since it now has 3 separate Redux reducers to update. Search - removed redundant mode state variable, plus the global seaarch mode variable and update method from the search Redux reducer.

--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,11 @@ div.search-result {
 table {
   width: 100%;
 }
+
+textarea {
+  border-radius: 15px;
+  max-width: 50vw;
+  max-height: 15vh;
+  margin-left: 25vw;
+  margin-right: 25vw;
+}
