Minor CSS. MessageForm sendIt method now sends the message data to my API and logs the response. Messaging component line 30 - passing recipient prop to MessageForm instance.

--- a/src/App.css
+++ b/src/App.css
@@ -109,9 +109,10 @@ table {
 }
 
 textarea {
-  border-radius: 15px;
-  max-width: 50vw;
+  border-radius: 10px;
+  width: 50vw;
   max-height: 15vh;
+  min-height: 10vh;
   margin-left: 25vw;
   margin-right: 25vw;
 }
