--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ nav li:hover, #dashMenu li:hover {
   color: #007AFF;
 }
 
-div.search-result, div.conversation {
+div.search-result, div.conversation, div.message {
   border: 1px solid black;
   border-radius: 15px;
   max-width: 50vw;
