Tried making a showMessages method in Conversation which calls props.show, which is just reference to the showConversation method in Messaging component

--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,10 @@ textarea {
   margin-right: 25vw;
 }
 
+.conversation {
+  max-height: 10vh;
+}
+
 .conversation:hover {
   box-shadow: 1px 1px 5px black;
 }
