CSS for Conversatin and Message components

--- a/src/App.css
+++ b/src/App.css
@@ -118,9 +118,13 @@ textarea {
 }
 
 .conversation {
-  max-height: 10vh;
+  height: 15vh;
 }
 
 .conversation:hover {
   box-shadow: 1px 1px 5px black;
+}
+
+.message {
+  height: 75%;
 }
