--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,8 @@ textarea {
 .conversation:hover {
   box-shadow: 1px 1px 5px black;
 }
+
+div.unread {
+  border: 2px solid #007AFF;
+  border-radius: 15px;
+}
